# DynamicContainerInventoryFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/RE/: misc.h  offset.h
src/common/: PCH.h
src/export/: SKSEPlugin.cpp
src/hooks/: hooks.cpp
src/settings/: INISettings.cpp
src/utilities/: utilities.h
